--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
             <p>Welcome to my Portfolio! I'm currently pursuing a BTech degree in Information Technology from RCC Institute of Information Technology, Kolkata. With a keen interest in software engineering, I'm dedicated to honing my skills in web development to pursue my goal of becoming a software engineer.</p>
 
             <div class="social-icons">
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
-                <a href="#"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://www.linkedin.com/in/anurag-ganguly-40b6ab245/"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/anurag831"><i class='bx bxl-github'></i></a>
+                <a href="https://www.instagram.com/anura_.g/"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="https://twitter.com/AnuragGanguly83"><i class='bx bxl-twitter' ></i></a>
             </div>
 
             <div class="btn-group">
-                <a href="#" class="btn">Hire</a>
+                <a href="https://www.linkedin.com/in/anurag-ganguly-40b6ab245/" class="btn">Hire</a>
                 <a href="#contact" class="btn">Contact</a>
             </div>
         </div>
@@ -195,10 +195,10 @@
 
     <footer class="footer">
         <div class="social">
-            <a href="#"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
-                <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <a href="https://www.linkedin.com/in/anurag-ganguly-40b6ab245/"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/anurag831"><i class='bx bxl-github'></i></a>
+                <a href="https://www.instagram.com/anura_.g/"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="https://twitter.com/AnuragGanguly83"><i class='bx bxl-twitter' ></i></a>
         </div>
 
         <ul class="list">
@@ -207,19 +207,19 @@
             </li>
 
             <li>
-                <a href="#">Services</a>
+                <a href="#services">Skills</a>
             </li>
 
             <li>
-                <a href="#">About Me</a>
+                <a href="#education">About Me</a>
             </li>
             
             <li>
-                <a href="#">Contact</a>
+                <a href="#contact">Contact</a>
             </li>
             
             <li>
-                <a href="#">Projects</a>
+                <a href="#projects">Projects</a>
             </li>
         </ul>
 
