Added the spsotify clone in projects section

--- a/index.html
+++ b/index.html
@@ -157,6 +157,19 @@
                 </div>
             </div>
 
+            <div class="project-box" >
+                <div class="project-info">
+                    <img src="Spotify-Thumbnail.png" alt="" class="projetc-img">
+                    <h4 class="project-heading">Spotify Web Music Player Clone</h4>
+                    <p class="project-description">This is a clone of the Spotify Web Music Player. I made this website using HTML, CSS  and JavaScript. It is functional, hosted and fully responsive.</p>
+
+                    <div class="btn-group">
+                        <a href="https://freemusicplayer.freewebhostmost.com/" class="btn">Demo</a>
+                        <a href="https://github.com/anurag831/Spotify-Clone" class="btn">View Code</a>
+                    </div>
+                </div>
+            </div>
+
            <div class="project-box">
                 <div class="project-info">
                     <img src="MHI-thumbnail.png" alt="" class="projetc-img">
