Updated Skills section

--- a/index.html
+++ b/index.html
@@ -115,6 +115,30 @@
                     <img src="js_img.png" alt="">
                 </div>
             </div>
+            
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Node</h4>
+                    <img src="node.png" alt="" style="width: auto;">
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>Express</h4>
+                    <img src="express.png" alt="" style="filter: invert(1);
+                    height: auto;
+                    width: revert-layer;
+                    padding-top: 26px;">
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>MongoDB</h4>
+                    <img src="mongodb.jpg" alt="">
+                </div>
+            </div>
 
             <div class="service-box">
                 <div class="service-info">
