--- a/index.html
+++ b/index.html
@@ -142,6 +142,13 @@
 
             <div class="service-box">
                 <div class="service-info">
+                    <h4>Tailwind Css</h4>
+                    <img src="tailwind2.png" alt="" >
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
                     <h4>C Programming</h4>
                     <img src="c_img.png" alt="">
                 </div>
@@ -198,10 +205,22 @@
                 <div class="project-info">
                     <img src="MHI-thumbnail.png" alt="" class="projetc-img">
                     <h4 class="project-heading">Mental Health Website</h4>
-                    <div class="project-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam pariatur reprehenderit placeat eligendi, nisi iusto necessitatibus laborum aut quia ea.</div>
+                    <div class="project-description">This is Mental Health determining website made using HTML, CSS and Javascript. It was made as a task of Smart India Hackathon 2023.</div>
                     <div class="btn-group">
                         <a href="https://mental-health-india.vercel.app/" class="btn">Demo</a>
                         <a href="https://github.com/anurag831/Mental-Health-" class="btn">View Code</a>
+                    </div>
+                </div>
+            </div>
+
+           <div class="project-box">
+                <div class="project-info">
+                    <img src="X.png" alt="" class="projetc-img">
+                    <h4 class="project-heading">Twitter Clone</h4>
+                    <div class="project-description">This is the clone of the official website of X. I made this to get a good grasp on the concepts of Tailwind css.</div>
+                    <div class="btn-group">
+                        <a href="https://twitter-clone-mauve-omega.vercel.app/" class="btn">Demo</a>
+                        <a href="https://github.com/anurag831/Twitter-Clone" class="btn">View Code</a>
                     </div>
                 </div>
             </div>
