--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <p class="project-description">This is a clone of the Spotify Web Music Player. I made this website using HTML, CSS  and JavaScript. It is functional, hosted and fully responsive.</p>
 
                     <div class="btn-group">
-                        <a href="https://freemusicplayer.freewebhostmost.com/" class="btn">Demo</a>
+                        <a href="https://freemusicplayerbyanurag.freewebhostmost.com/" class="btn">Demo</a>
                         <a href="https://github.com/anurag831/Spotify-Clone" class="btn">View Code</a>
                     </div>
                 </div>
