updated with a new project

--- a/index.html
+++ b/index.html
@@ -175,6 +175,20 @@
 
         <div class="projects-container">
 
+            <div class="project-box" ></div>
+                <div class="project-info">
+                    <img src="swacch.png" alt="" class="projetc-img">
+                    <h4 class="project-heading">Dashboard for Swacchta and LiFE</h4>
+                    <p class="project-description">A dashboard aimed at maintaining cleanliness and LiFE practices, integrating AI-powered image processing technology for effective monitoring of Swacchta and green practices adopted in offices. The dashboard can be accessible from the Divisional Office offering surveillance capabilities and triggering alerts for deviation from prescribed Swacchta and Green Growth standards to prompt on ground intervention to guide the sub-office concerned to make necessary changes to conform to set expectations.</p>
+
+                    <div class="btn-group">
+                        <a  class="btn">Demo</a>
+                        <a href="https://github.com/anurag831/SIH2024_Main-main" class="btn">View Code</a>
+                    </div>
+                </div>
+            </div>
+
+
             <div class="project-box" >
                 <div class="project-info">
                     <img src="netflix.png" alt="" class="projetc-img">
