swacchta project box error fix

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
         <div class="projects-container">
 
-            <div class="project-box" ></div>
+            <div class="project-box" >
                 <div class="project-info">
                     <img src="swacch.png" alt="" class="projetc-img">
                     <h4 class="project-heading">Dashboard for Swacchta and LiFE</h4>
