changed height of poject-box

--- a/index.html
+++ b/index.html
@@ -179,11 +179,24 @@
                 <div class="project-info">
                     <img src="swacch.png" alt="" class="projetc-img">
                     <h4 class="project-heading">Dashboard for Swacchta and LiFE</h4>
-                    <p class="project-description">A dashboard aimed at maintaining cleanliness and LiFE practices, integrating AI-powered image processing technology for effective monitoring of Swacchta and green practices adopted in offices.</p>
+                    <p class="project-description">A dashboard aimed at maintaining cleanliness and LiFE practices, integrating AI-powered image processing technology for effective monitoring of green practices adopted in offices.</p>
 
                     <div class="btn-group">
                         <a  class="btn">Demo</a>
                         <a href="https://github.com/anurag831/SIH2024_Main-main" class="btn">View Code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-box" ></div>
+                <div class="project-info">
+                    <img src="Spotify-Thumbnail.png" alt="" class="projetc-img">
+                    <h4 class="project-heading">Spotify Web Music Player Clone</h4>
+                    <p class="project-description">This is a clone of the Spotify Web Music Player. I made this website using HTML, CSS  and JavaScript. It is functional, hosted and fully responsive.</p>
+
+                    <div class="btn-group">
+                        <a href="https://freemusicplayerbyanurag.freewebhostmost.com/" class="btn">Demo</a>
+                        <a href="https://github.com/anurag831/Spotify-Clone" class="btn">View Code</a>
                     </div>
                 </div>
             </div>
@@ -202,18 +215,7 @@
                 </div>
             </div>
 
-            <div class="project-box" >
-                <div class="project-info">
-                    <img src="Spotify-Thumbnail.png" alt="" class="projetc-img">
-                    <h4 class="project-heading">Spotify Web Music Player Clone</h4>
-                    <p class="project-description">This is a clone of the Spotify Web Music Player. I made this website using HTML, CSS  and JavaScript. It is functional, hosted and fully responsive.</p>
-
-                    <div class="btn-group">
-                        <a href="https://freemusicplayerbyanurag.freewebhostmost.com/" class="btn">Demo</a>
-                        <a href="https://github.com/anurag831/Spotify-Clone" class="btn">View Code</a>
-                    </div>
-                </div>
-            </div>
+            
 
            <div class="project-box">
                 <div class="project-info">
