project-box error fix

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
             </div>
 
-            <div class="project-box" ></div>
+            <div class="project-box" >
                 <div class="project-info">
                     <img src="Spotify-Thumbnail.png" alt="" class="projetc-img">
                     <h4 class="project-heading">Spotify Web Music Player Clone</h4>
