added password manager project

--- a/index.html
+++ b/index.html
@@ -201,6 +201,19 @@
                 </div>
             </div>
 
+            <div class="project-box" >
+                <div class="project-info">
+                    <img src="passop.png" alt="" class="projetc-img">
+                    <h4 class="project-heading">Password Manager - React JS</h4>
+                    <p class="project-description">This is an ultimate password manager, made using React JS. Users can save their passwords for websites along with their username and password.</p>
+
+                    <div class="btn-group">
+                        <a href="https://passop-kohl.vercel.app/" class="btn">Demo</a>
+                        <a href="https://github.com/anurag831/passop" class="btn">View Code</a>
+                    </div>
+                </div>
+            </div>
+
 
             <div class="project-box" >
                 <div class="project-info">
