added reactjs logo

--- a/index.html
+++ b/index.html
@@ -140,6 +140,13 @@
                 </div>
             </div>
 
+
+            <div class="service-box">
+                <div class="service-info">
+                    <h4>ReactJS</h4>
+                    <img src="react.png" alt="">
+                </div>
+            </div>
             <div class="service-box">
                 <div class="service-info">
                     <h4>Tailwind Css</h4>
@@ -167,6 +174,8 @@
                     <img src="vercel_img.png" alt="">
                 </div>
             </div>
+
+            
         </div>
     </section>
 
