Added Gym management app

--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@
                     <p class="project-description">A dashboard aimed at maintaining cleanliness and LiFE practices, integrating AI-powered image processing technology for effective monitoring of green practices adopted in offices.</p>
 
                     <div class="btn-group">
-                        <a  class="btn">Demo</a>
-                        <a href="https://github.com/anurag831/SIH2024_Main-main" class="btn">View Code</a>
+                        <a  target="_blank" class="btn">Demo</a>
+                        <a href="https://github.com/anurag831/SIH2024_Main-main" target="_blank" class="btn">View Code</a>
                     </div>
                 </div>
             </div>
@@ -204,8 +204,22 @@
                     <p class="project-description">This is a clone of the Spotify Web Music Player. I made this website using HTML, CSS  and JavaScript. It is functional, hosted and fully responsive.</p>
 
                     <div class="btn-group">
-                        <a href="https://freemusicplayerbyanurag.freewebhostmost.com/" class="btn">Demo</a>
-                        <a href="https://github.com/anurag831/Spotify-Clone" class="btn">View Code</a>
+                        <a href="https://freemusicplayerbyanurag.freewebhostmost.com/" target="_blank" class="btn">Demo</a>
+                        <a href="https://github.com/anurag831/Spotify-Clone" target="_blank" class="btn">View Code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-box" >
+                <div class="project-info">
+                    <img src="gym_landing_page.png" alt="" class="projetc-img">
+                    <h4 class="project-heading">Gym Management Application </h4>
+                    <p class="project-description">A full-stack web application with user sign-up/login, exercise tracking, and role-based access control, including an admin 
+                        dashboard. </p>
+
+                    <div class="btn-group">
+                        <a target="_blank" class="btn">Demo</a>
+                        <a href="https://github.com/anurag831/MERN_GYM_MANAGER" target="_blank" class="btn">View Code</a>
                     </div>
                 </div>
             </div>
@@ -217,8 +231,8 @@
                     <p class="project-description">This is an ultimate password manager, made using React JS. Users can save their passwords for websites along with their username and password.</p>
 
                     <div class="btn-group">
-                        <a href="https://passop-kohl.vercel.app/" class="btn">Demo</a>
-                        <a href="https://github.com/anurag831/passop" class="btn">View Code</a>
+                        <a href="https://passop-kohl.vercel.app/" target="_blank" class="btn">Demo</a>
+                        <a href="https://github.com/anurag831/passop" target="_blank" class="btn">View Code</a>
                     </div>
                 </div>
             </div>
@@ -231,8 +245,8 @@
                     <p class="project-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium cumque unde ipsa quaerat pariatur repudiandae beatae blanditiis! Ex, eveniet nulla.</p>
 
                     <div class="btn-group">
-                        <a href="https://netflix-landing-page-ashy.vercel.app/" class="btn">Demo</a>
-                        <a href="https://github.com/anurag831/Netflix-landing-page" class="btn">View Code</a>
+                        <a href="https://netflix-landing-page-ashy.vercel.app/" target="_blank" class="btn">Demo</a>
+                        <a href="https://github.com/anurag831/Netflix-landing-page" target="_blank" class="btn">View Code</a>
                     </div>
                 </div>
             </div>
@@ -245,8 +259,8 @@
                     <h4 class="project-heading">Mental Health Website</h4>
                     <div class="project-description">This is Mental Health determining website made using HTML, CSS and Javascript. It was made as a task of Smart India Hackathon 2023.</div>
                     <div class="btn-group">
-                        <a href="https://mental-health-india.vercel.app/" class="btn">Demo</a>
-                        <a href="https://github.com/anurag831/Mental-Health-" class="btn">View Code</a>
+                        <a href="https://mental-health-india.vercel.app/" target="_blank" class="btn">Demo</a>
+                        <a href="https://github.com/anurag831/Mental-Health-" target="_blank" class="btn">View Code</a>
                     </div>
                 </div>
             </div>
@@ -257,8 +271,8 @@
                     <h4 class="project-heading">Twitter Clone</h4>
                     <div class="project-description">This is the clone of the official website of X. I made this to get a good grasp on the concepts of Tailwind css.</div>
                     <div class="btn-group">
-                        <a href="https://twitter-clone-mauve-omega.vercel.app/" class="btn">Demo</a>
-                        <a href="https://github.com/anurag831/Twitter-Clone" class="btn">View Code</a>
+                        <a href="https://twitter-clone-mauve-omega.vercel.app/" target="_blank" class="btn">Demo</a>
+                        <a href="https://github.com/anurag831/Twitter-Clone" target="_blank" class="btn">View Code</a>
                     </div>
                 </div>
             </div>
