Updated experience section

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <div>
                         <img src="hansrajventures_logo.jpeg" alt="Hansraj Ventures Logo" class="internship-logo"
                             style="width:70px;height:70px;border-radius:10px;margin-bottom:10px;">
-                        <h3>Backend Developer Intern</h3>
+                        <h3>Web Developer Intern</h3>
                         <h4>Hansraj Ventures <span style="font-weight:normal;">· Internship</span></h4>
                         <p class="internship-duration">Dec 2024 - Feb 2025<br>Remote · Hybrid</p>
                         <ul class="internship-details">
@@ -123,19 +123,23 @@
                             <li>Contributing to frontend development tasks, handling both solo and collaborative
                                 projects.
                             </li>
-                            <li>Working with technologies like Node.js, Express.js, and more.</li>
+                            <li>Working with technologies like React.js, Node.js, Express.js, MongoDB, Electron.js</li>
                         </ul>
                         <div class="internship-skills">
                             <span>Node.js</span>
                             <span>Express.js</span>
-                            <span>Backend Development</span>
-                            <span>Frontend Development</span>
+                            <span>React.js</span>
+                            <span>MongoDB</span>
+                            <span>Electron.js</span>
+                            <span>Firebase</span>
+                            <span>Aws s3 bucket</span>
+                            <span>Postman</span>
                         </div>
                     </div>
 
                     <div class="internship-offer-letter">
-                        <img src="offerLetter.jpeg" alt="Offer Letter">
-                        <p style="font-size:0.9em;margin-top:4px;">Offer Letter</p>
+                        <img src="ExperienceLetter.png" alt="Offer Letter">
+                        <p style="font-size:0.9em;margin-top:4px;">Experience Letter</p>
                     </div>
                 </div>
             </div>
