updated experience letter

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     </div>
 
                     <div class="internship-offer-letter">
-                        <img src="ExperienceLetter.png" alt="Offer Letter">
+                        <img src="ExperienceLetter-Revised.png" alt="Offer Letter">
                         <p style="font-size:0.9em;margin-top:4px;">Experience Letter</p>
                     </div>
                 </div>
